<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>

	<android.support.v7.widget.CardView
		android:id="@+id/card_view"
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		card_view:cardCornerRadius="4dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			>

			<ImageView
				android:id="@+id/thumbnailImageView"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scaleType="fitXY"
				android:contentDescription="@string/content_description_thumbnail"
				/>

			<TextView
				android:id="@+id/fileNameView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ellipsize="marquee"
				android:paddingBottom="4dp"
				android:paddingLeft="16dp"
				android:paddingTop="4dp"
				android:singleLine="true"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/black_light"
				android:visibility="visible"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button
					android:id="@+id/shareFile"
					style="?android:attr/borderlessButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:text="@string/label_share"
					android:textAllCaps="true"
					android:textColor="@android:color/holo_orange_light"
					android:textSize="14sp"/>

				<Button
					android:id="@+id/viewFile"
					style="?android:attr/borderlessButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:text="@string/label_open"
					android:textAllCaps="true"
					android:textColor="@android:color/holo_blue_light"
					android:textSize="14sp"/>

			</LinearLayout>

		</LinearLayout>


	</android.support.v7.widget.CardView>
</LinearLayout>