<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="in.org.amnesty.outreach.fragments.SetupFragment">

	<include layout="@layout/base_toolbar_layout"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp">


		<LinearLayout
			android:id="@+id/citySetupLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_centerInParent="true"
			android:orientation="vertical"
			>


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:minHeight="200dp"
				android:orientation="vertical"
				android:padding="4dp"
				>

				<RelativeLayout
					android:id="@+id/contentLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:orientation="vertical"
					android:visibility="gone"
					android:background="@drawable/background_card"
					android:layout_marginBottom="8dp"
					android:padding="8dp">

					<ListView
						android:id="@+id/cityList"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_centerInParent="true"
						/>

				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/progressLayout"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_centerInParent="true"
					android:orientation="vertical">

					<ProgressBar
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_gravity="center"/>
				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/noContentLayout"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical"
					android:visibility="gone">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_gravity="center"
						android:text="@string/message_no_content"
						android:textAppearance="?android:attr/textAppearanceMedium"/>
				</RelativeLayout>

			</LinearLayout>


			<Button
				android:id="@+id/downloadButton"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:drawableLeft="@drawable/ic_action_file_cloud_download"
				android:drawablePadding="8dp"
				android:gravity="center_vertical"
				android:text="@string/label_download"
				android:textAllCaps="true"
				android:textColor="@color/blue_dark"
				android:visibility="invisible"/>
		</LinearLayout>


		<LinearLayout
			android:id="@+id/downloadProgressLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:orientation="vertical"
			android:visibility="gone">


			<TextView
				android:id="@+id/statusTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:text="@string/message_download_start"
				android:textColor="@color/black_light"
				android:textSize="20sp"/>

			<LinearLayout
				android:id="@+id/downloadProgressCounterLayout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:visibility="gone">

				<TextView
					android:id="@+id/currentItemTextView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="4dp"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/black_light"
					android:textSize="16sp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="4dp"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:text="@string/label_of"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/black_light"
					android:textSize="14sp"/>

				<TextView
					android:id="@+id/totalItemTextView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="4dp"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/black_light"
					android:textSize="16sp"/>
			</LinearLayout>

			<ProgressBar
				android:id="@+id/downloadProgressBar"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:indeterminate="true"
				android:textColor="@color/black_light"/>

		</LinearLayout>
	</RelativeLayout>
</LinearLayout>